# markdownfeeds

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
examples/1-simple-json-feed/: generate.py
examples/1-simple-json-feed/feed/: feed.json
examples/1-simple-json-feed/logs/: 2024-02-01-alpha-quadrant.md  2024-02-02-q-arrives.md
examples/2-paged-html-feed/: generate.py
examples/2-paged-html-feed/feed/: index.html
examples/3-multiple-parallel-feeds/: generate.py
examples/3-multiple-parallel-feeds/json/log1/: feed.json
examples/3-multiple-parallel-feeds/json/log2/: feed.json
examples/3-multiple-parallel-feeds/news/: 2024-02-02-hello-world.md  2024-02-06-another-test-file.md
examples/4-inject-feed-properties/: generate.py
examples/4-inject-feed-properties/json/log1/: feed.json
examples/4-inject-feed-properties/logs/: 2024-02-03-the-borg.md
src/markdownfeeds/: Gatherer.py  MarkdownFile.py  __init__.py
src/markdownfeeds/Exceptions/: __init__.py
src/markdownfeeds/Generators/: __init__.py
src/markdownfeeds/Generators/Default/: DefaultFeedGenerator.py
src/markdownfeeds/Generators/Default/Exceptions/: __init__.py
src/markdownfeeds/Generators/Default/Models/: Feed.py  FeedItem.py  __init__.py
src/markdownfeeds/Generators/Html/: HtmlFeedGenerator.py  template.html
src/markdownfeeds/Generators/Json/: JsonFeedGenerator.py
src/markdownfeeds/Generators/Json/Models/: Author.py  Hub.py  JsonFeed.py  JsonFeedItem.py  __init__.py
